--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,14 @@
         {{ content }}
       </section>
     </div>
-
+    
+    <footer>
+      <p>Copyright &copy; Kcits.rip - 
+      <script type="text/JavaScript">
+        document.write(new Date().getFullYear());
+      </script></p>
+    </footer>
+    
     {% if site.google_analytics %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
