--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,12 @@
     </div>
     
     <footer>
-      <p>Copyright &copy; Kcits.rip - 
-      <script type="text/JavaScript">
-        document.write(new Date().getFullYear());
-      </script></p>
+      <div class="container">
+        <p>Copyright &copy; Kcits.rip - 
+        <script type="text/JavaScript">
+          document.write(new Date().getFullYear());
+        </script></p>
+      </div>
     </footer>
     
     {% if site.google_analytics %}
